--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="ui"></div>
 		-->
 	
-		<canvas id="c"></canvas>
+		<canvas tabindex="0" id="c"></canvas>
     	
 
 		<script type="module" src="hamster.js"></script>
